Reduced the 'add-opens' options